--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title></title>
         <script type="module" src="index.js" defer></script>
+        <link rel="stylesheet" href="style/output/index.css" />
     </head>
     <body>
         <header><h1></h1></header>
-        <section></section>
+        <section id="container">
+            <section id="sidebar"></section>
+            <section id="content"></section>
+        </section>
     </body>
 </html>
