Allow youtube to display

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <body>
         <header><h1></h1></header>
         <section id="sidebar"></section>
-        <section id="content"></section>
+        <section id="display"></section>
     </body>
 </html>
