--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
         <title></title>
         <script type="module" src="index.js" defer></script>
         <link rel="stylesheet" href="style/output/index.css" />
+        <!-- font awesome social icons -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
     <body>
-        <header><h1></h1></header>
+        <header>
+            <h1></h1>
+            <section id="social">
+                <a href="#" id="about-link">About</a>
+                <a href="#" class="fa fa-instagram fa-2x"></a>
+                <a href="#" class="fa fa-youtube fa-2x"></a>
+                <a href="#" class="fa fa-apple fa-2x"></a>
+                <a href="#" class="fa fa-spotify fa-2x"></a>
+                <a href="#" class="fa fa-soundcloud fa-2x"></a>
+            </section>
+        </header>
         <section id="sidebar"></section>
         <section id="display"></section>
     </body>
