--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h1></h1>
             <section id="social">
                 <a href="#" id="about-link">About</a>
-                <a href="#" class="fa fa-instagram fa-2x"></a>
-                <a href="#" class="fa fa-youtube fa-2x"></a>
-                <a href="#" class="fa fa-apple fa-2x"></a>
-                <a href="#" class="fa fa-spotify fa-2x"></a>
-                <a href="#" class="fa fa-soundcloud fa-2x"></a>
+                <a href="#" class="fa fa-instagram fa-2x" target="_blank"></a>
+                <a href="#" class="fa fa-youtube fa-2x" target="_blank"></a>
+                <a href="#" class="fa fa-apple fa-2x" target="_blank"></a>
+                <a href="#" class="fa fa-spotify fa-2x" target="_blank"></a>
+                <a href="#" class="fa fa-soundcloud fa-2x" target="_blank"></a>
             </section>
         </header>
         <section id="sidebar"></section>
