Add header image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         />
     </head>
     <body>
+        <section id="header-image"></section>
         <header>
             <h1></h1>
             <section id="social">
