Update phone styles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             </section>
         </header>
         <section id="sidebar"></section>
+        <button id="mobile-menu-toggle">
+            <a href="#" class="fa fa-bars fa-2x" target="_blank"></a>
+            <span>See discography</span>
+        </button>
         <section id="display"></section>
     </body>
 </html>
