--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- font awesome social icons -->
         <link
             rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         />
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,13 +26,37 @@
             <h1></h1>
             <section id="social">
                 <a href="#" id="about-link">About</a>
-                <a href="#" class="fa fa-instagram fa-2x" target="_blank"></a>
-                <a href="#" class="fa fa-youtube fa-2x" target="_blank"></a>
-                <a href="#" class="fa fa-apple fa-2x" target="_blank"></a>
-                <a href="#" class="fa fa-spotify fa-2x" target="_blank"></a>
-                <a href="#" class="fa fa-soundcloud fa-2x" target="_blank"></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-instagram fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-youtube fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-apple fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-spotify fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-soundcloud fa-2x"
+                    target="_blank"
+                ></a>
             </section>
         </header>
+        <section id="menu">
+            <button><i class="fa-solid fa-music"></i>Singles</button>
+            <button><i class="fa-solid fa-compact-disc"></i>Albums</button>
+        </section>
         <section id="sidebar"></section>
         <button id="mobile-menu-toggle">
             <a href="#" class="fa fa-bars fa-2x" target="_blank"></a>
