Allow switch singles/albums

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
             </section>
         </header>
         <section id="menu">
-            <button><i class="fa-solid fa-music"></i>Singles</button>
-            <button><i class="fa-solid fa-compact-disc"></i>Albums</button>
+            <button id="singles">
+                <i class="fa-solid fa-music"></i>Singles
+            </button>
+            <button id="albums">
+                <i class="fa-solid fa-compact-disc"></i>Albums
+            </button>
         </section>
         <section id="sidebar"></section>
         <button id="mobile-menu-toggle">
