Add about link to google

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <header>
             <h1></h1>
             <section id="social">
-                <a href="#" id="about-link">About</a>
+                <a
+                    href="https://g.co/kgs/hBeQNs"
+                    id="about-link"
+                    target="_blank"
+                    >About</a
+                >
                 <a
                     href="#"
                     class="fa-brands fa-instagram fa-2x"
