Add footer image

--- a/index.html
+++ b/index.html
@@ -68,5 +68,41 @@
         </section>
         <section id="sidebar"></section>
         <section id="display"></section>
+        <footer>
+            <img src="./assets/images/stylus.jpg" alt="stylus" />
+            <section id="social">
+                <a
+                    href="https://g.co/kgs/hBeQNs"
+                    id="about-link"
+                    target="_blank"
+                    >About</a
+                >
+                <a
+                    href="#"
+                    class="fa-brands fa-instagram fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-youtube fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-apple fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-spotify fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-soundcloud fa-2x"
+                    target="_blank"
+                ></a>
+            </section>
+        </footer>
     </body>
 </html>
