Add new social links

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
             <h1></h1>
             <section id="social">
                 <a
-                    href="https://g.co/kgs/hBeQNs"
-                    id="about-link"
+                    href="#"
+                    class="fa-brands fa-wordpress fa-2x"
                     target="_blank"
-                    >About</a
-                >
+                ></a>
                 <a
                     href="#"
                     class="fa-brands fa-instagram fa-2x"
@@ -54,6 +53,11 @@
                 <a
                     href="#"
                     class="fa-brands fa-soundcloud fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-whatsapp fa-2x"
                     target="_blank"
                 ></a>
             </section>
@@ -72,11 +76,10 @@
             <img src="./assets/images/stylus.jpg" alt="stylus" />
             <section id="social">
                 <a
-                    href="https://g.co/kgs/hBeQNs"
-                    id="about-link"
+                    href="#"
+                    class="fa-brands fa-wordpress fa-2x"
                     target="_blank"
-                    >About</a
-                >
+                ></a>
                 <a
                     href="#"
                     class="fa-brands fa-instagram fa-2x"
@@ -100,6 +103,11 @@
                 <a
                     href="#"
                     class="fa-brands fa-soundcloud fa-2x"
+                    target="_blank"
+                ></a>
+                <a
+                    href="#"
+                    class="fa-brands fa-whatsapp fa-2x"
                     target="_blank"
                 ></a>
             </section>
