--- a/index.html
+++ b/index.html
@@ -71,7 +71,51 @@
             </button>
         </section>
         <section id="sidebar"></section>
-        <section id="display"></section>
+        <section id="display">
+            <h1>Thank you for visiting my website.</h1>
+            <section id="intro">
+                <p>
+                    Raymond.mowla.music (IG) started out as a journey from just
+                    wanting to accomplish recording a single in my lifetime, to
+                    now operating as an organization invested the development of
+                    other Artist.
+                </p>
+                <p>
+                    Through collaborations with various producers, artists,
+                    photographers, and other creatives, this short but sweet
+                    journey has had a significant growing and learning curve
+                    that moved me from working with a producer to release, ‘one
+                    track a month’ in 2019, to now producing my own music and
+                    releasing close to ‘one track a week’ along with multiple
+                    albums a year in 2022!
+                </p>
+                <p>
+                    Along the way, I think I’ve gained some great insights and
+                    enjoy working with artists who, more than simply ‘getting
+                    famous’ are interested in developing their craft and
+                    learning from one another.
+                </p>
+                <p>
+                    I used to wish I could do this full time, but now, despite
+                    working a full-time job, I realized that I pretty much ‘do’
+                    do this as a full time hobby. In the past three years I’ve
+                    written and produced music in the genre’s of Gospel, Hip
+                    Hop, Rap, R&B, Soul, and Reggae.
+                </p>
+                <p>
+                    I’m always open to collaborations and know I have much more
+                    diversity of music styles still hidden away in me yet! Feel
+                    welcome to reach out if you’re interested to learn more.
+                </p>
+                <p>
+                    Email:
+                    <a href="mailto:mowla.raymond@gmail.com"
+                        >mowla.raymond@gmail.com</a
+                    >
+                </p>
+                <p>Blessings always,</p>
+            </section>
+        </section>
         <footer>
             <img src="./assets/images/stylus.jpg" alt="stylus" />
             <section id="social">
