--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title></title>
         <script type="module" src="index.js" defer></script>
         <link rel="stylesheet" href="style/output/index.css" />
+        <link rel="icon" type="image/x-icon" href="/assets/images/stylus.jpg" />
         <!-- font awesome social icons -->
         <link
             rel="stylesheet"
@@ -71,7 +72,8 @@
             </button>
         </section>
         <section id="sidebar"></section>
-        <section id="display">
+        <section id="display"></section>
+        <section id="intro-container">
             <h1>Thank you for visiting my website.</h1>
             <section id="intro">
                 <p>
