Add intro and credits

--- a/index.html
+++ b/index.html
@@ -25,42 +25,49 @@
         <section id="header-image"></section>
         <header>
             <h1></h1>
-            <section id="social">
-                <a
-                    href="#"
-                    class="fa-brands fa-wordpress fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-instagram fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-youtube fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-apple fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-spotify fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-soundcloud fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-whatsapp fa-2x"
-                    target="_blank"
-                ></a>
+            <section id="header-links">
+                <section id="social">
+                    <a
+                        href="#"
+                        class="fa-brands fa-wordpress fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-instagram fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-youtube fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-apple fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-spotify fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-soundcloud fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-whatsapp fa-2x"
+                        target="_blank"
+                    ></a>
+                </section>
+                <section id="header-text-links">
+                    <a href="#" id="header-intro-text-link">About</a>
+                    |
+                    <a href="#" id="header-credits-text-link">Credits</a>
+                </section>
             </section>
         </header>
         <section id="menu">
@@ -118,44 +125,76 @@
                 <p>Blessings always,</p>
             </section>
         </section>
+        <section id="credits-container">
+            <section id="credits">
+                <h1>Special Thanks to:</h1>
+                <ul>
+                    <li>Adam Pondang - Producer</li>
+                    <li>Tonisha Dumaresq – Artist</li>
+                    <li>Mike DeFaria - Producer</li>
+                    <li>Daniella “V” Neyra – Artist</li>
+                    <li>
+                        Sean Xiao – Photography, Videography, Artist &amp;
+                        Website Design
+                    </li>
+                    <li>Tamira Roza – Artist</li>
+                    <li>Suzka - Artist</li>
+                    <li>Justin “J.Rhythmatic” Shaw – Artist</li>
+                    <li>Rayon Anthony – Artist</li>
+                    <li>Shan “Kloud9” Singh – Artist</li>
+                    <li>Tone Avant – Artist</li>
+                </ul>
+                <p>
+                    And all of the faithful brothers and sisters in Christ who
+                    continually remember me in their prayers.
+                </p>
+            </section>
+        </section>
         <footer>
             <img src="./assets/images/stylus.jpg" alt="stylus" />
-            <section id="social">
-                <a
-                    href="#"
-                    class="fa-brands fa-wordpress fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-instagram fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-youtube fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-apple fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-spotify fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-soundcloud fa-2x"
-                    target="_blank"
-                ></a>
-                <a
-                    href="#"
-                    class="fa-brands fa-whatsapp fa-2x"
-                    target="_blank"
-                ></a>
+            <section id="footer-links">
+                <section id="social">
+                    <a
+                        href="#"
+                        class="fa-brands fa-wordpress fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-instagram fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-youtube fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-apple fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-spotify fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-soundcloud fa-2x"
+                        target="_blank"
+                    ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-whatsapp fa-2x"
+                        target="_blank"
+                    ></a>
+                </section>
+                <section id="footer-text-links">
+                    <a href="#" id="footer-intro-text-link">About</a>
+                    |
+                    <a href="#" id="footer-credits-text-link">Credits</a>
+                </section>
             </section>
         </footer>
     </body>
