Add short description to header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <body>
         <section id="header-image"></section>
         <header>
-            <h1></h1>
+            <div id="name">
+                <h1></h1>
+                <span></span>
+            </div>
             <section id="header-links">
                 <section id="social">
                     <a
