--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <section id="header-image"></section>
         <header>
             <div id="name">
+                <img src="./assets/images/stylus2.jpg" id="header-avatar" />
                 <h1></h1>
                 <span></span>
             </div>
@@ -149,7 +150,7 @@
             </section>
         </section>
         <footer>
-            <img src="./assets/images/stylus.jpg" alt="stylus" />
+            <img src="./assets/images/stylus2.jpg" alt="stylus" />
             <section id="footer-links">
                 <section id="social">
                     <a
