Add style4 image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <title></title>
         <script type="module" src="index.js" defer></script>
         <link rel="stylesheet" href="style/output/index.css" />
-        <link rel="icon" type="image/x-icon" href="/assets/images/stylus.jpg" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/assets/images/stylus4.jpg"
+        />
         <!-- font awesome social icons -->
         <link
             rel="stylesheet"
@@ -25,7 +29,7 @@
         <section id="header-image"></section>
         <header>
             <div id="name">
-                <img src="./assets/images/stylus3.jpg" id="header-avatar" />
+                <img src="./assets/images/stylus4.jpg" id="header-avatar" />
                 <h1></h1>
                 <span></span>
             </div>
@@ -150,7 +154,7 @@
             </section>
         </section>
         <footer>
-            <img src="./assets/images/stylus3.jpg" alt="stylus" />
+            <img src="./assets/images/stylus4.jpg" alt="stylus" />
             <section id="footer-links">
                 <section id="social">
                     <a
