Add tiktok to header

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                         class="fa-brands fa-whatsapp fa-2x"
                         target="_blank"
                     ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-tiktok fa-2x"
+                        target="_blank"
+                    ></a>
                 </section>
                 <section id="header-text-links">
                     <a href="#" id="header-intro-text-link">About</a>
