Add tiktok to footer

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
                         class="fa-brands fa-whatsapp fa-2x"
                         target="_blank"
                     ></a>
+                    <a
+                        href="#"
+                        class="fa-brands fa-tiktok fa-2x"
+                        target="_blank"
+                    ></a>
                 </section>
                 <section id="footer-text-links">
                     <a href="#" id="footer-intro-text-link">About</a>
