Add free styles

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             <button id="albums">
                 <i class="fa-solid fa-compact-disc"></i>Albums
             </button>
+            <button id="freestyles">
+                <i class="fa-solid fa-microphone"></i>Free Styles
+            </button>
         </section>
         <section id="sidebar"></section>
         <section id="display"></section>
