Add Daywalkers, Take It In Blood Freestyle, and Reminiscin'

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <i class="fa-solid fa-compact-disc"></i>Albums
             </button>
             <button id="freestyles">
-                <i class="fa-solid fa-microphone"></i>Free Styles
+                <i class="fa-solid fa-microphone"></i>Freestyles
             </button>
         </section>
         <section id="sidebar"></section>
