--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         <section id="header-image"></section>
         <header>
             <div id="name">
-                <img src="./assets/images/stylus4.jpg" id="header-avatar" />
+                <!-- <img src="./assets/images/stylus4.jpg" id="header-avatar" /> -->
+                <video autoplay loop muted id="header-avatar">
+                    <source
+                        src="./assets/images/stylus_video1.mp4"
+                        type="video/mp4"
+                    />
+                    Your browser does not support the video tag.
+                </video>
                 <h1></h1>
                 <span></span>
             </div>
