--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title></title>
-        <script type="module" src="index.js" defer></script>
+        <title>Raymond Mowla Music</title>
+        <meta
+            name="description"
+            content="Author | Songwriter | Speaker | Artist. Raymond Mowla is a recording artist and producer based in Toronto who actively collaborates with other artists."
+        />
         <link rel="stylesheet" href="style/output/index.css" />
         <link
             rel="icon"
@@ -24,6 +27,7 @@
             href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&family=Manrope:wght@400;500&display=swap"
             rel="stylesheet"
         />
+        <script type="module" src="index.js" defer></script>
     </head>
     <body>
         <section id="header-image"></section>
