--- a/index.html
+++ b/index.html
@@ -1,213 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Raymond Mowla Music</title>
-        <meta
-            name="description"
-            content="Author | Songwriter | Speaker | Artist. Raymond Mowla is a recording artist and producer based in Toronto who actively collaborates with other artists."
-        />
-        <link rel="stylesheet" href="style/output/index.css" />
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="/assets/images/stylus4.jpg"
-        />
-        <!-- font awesome social icons -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        />
-        <!-- google fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&family=Manrope:wght@400;500&display=swap"
-            rel="stylesheet"
-        />
-        <script type="module" src="index.js" defer></script>
-    </head>
-    <body>
-        <section id="header-image"></section>
-        <header>
-            <div id="name">
-                <!-- <img src="./assets/images/stylus4.jpg" id="header-avatar" /> -->
-                <video autoplay loop muted id="header-avatar">
-                    <source
-                        src="./assets/images/stylus_video1.mp4"
-                        type="video/mp4"
-                    />
-                    Your browser does not support the video tag.
-                </video>
-                <h1></h1>
-                <span></span>
-            </div>
-            <section id="header-links">
-                <section id="social">
-                    <a
-                        href="#"
-                        class="fa-brands fa-instagram fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-youtube fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-apple fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-spotify fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-soundcloud fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-whatsapp fa-2x"
-                        target="_blank"
-                    ></a>
-                </section>
-                <section id="header-text-links">
-                    <a href="#" id="header-intro-text-link">About</a>
-                    |
-                    <a href="#" id="header-credits-text-link">Credits</a>
-                </section>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Raymond Mowla Music</title>
+    <meta name="description"
+        content="Author | Songwriter | Speaker | Artist. Raymond Mowla is a recording artist and producer based in Toronto who actively collaborates with other artists." />
+    <link rel="stylesheet" href="style/output/index.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/stylus4.jpg" />
+    <!-- font awesome social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&family=Manrope:wght@400;500&display=swap"
+        rel="stylesheet" />
+    <script type="module" src="index.js" defer></script>
+</head>
+
+<body>
+    <section id="header-image"></section>
+    <header>
+        <div id="name">
+            <!-- <img src="./assets/images/stylus4.jpg" id="header-avatar" /> -->
+            <video autoplay loop muted id="header-avatar">
+                <source src="./assets/images/stylus_video1.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+            </video>
+            <h1></h1>
+            <span></span>
+        </div>
+        <section id="header-links">
+            <section id="social">
+                <a href="#" class="fa-brands fa-instagram fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-youtube fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-apple fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-spotify fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-soundcloud fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-whatsapp fa-2x" target="_blank"></a>
             </section>
-        </header>
-        <section id="menu">
-            <button id="singles">
-                <i class="fa-solid fa-music"></i>Singles
-            </button>
-            <button id="albums">
-                <i class="fa-solid fa-compact-disc"></i>Albums
-            </button>
-            <button id="freestyles">
-                <i class="fa-solid fa-microphone"></i>Freestyles
-            </button>
-        </section>
-        <section id="sidebar"></section>
-        <section id="display"></section>
-        <section id="intro-container">
-            <h1>Thank you for visiting my website.</h1>
-            <section id="intro">
-                <p>
-                    Raymond.mowla.music (IG) started out as a journey from just
-                    wanting to accomplish recording a single in my lifetime, to
-                    now operating as an organization invested the development of
-                    other Artist.
-                </p>
-                <p>
-                    Through collaborations with various producers, artists,
-                    photographers, and other creatives, this short but sweet
-                    journey has had a significant growing and learning curve
-                    that moved me from working with a producer to release, ‘one
-                    track a month’ in 2019, to now producing my own music and
-                    releasing close to ‘one track a week’ along with multiple
-                    albums a year in 2022!
-                </p>
-                <p>
-                    Along the way, I think I’ve gained some great insights and
-                    enjoy working with artists who, more than simply ‘getting
-                    famous’ are interested in developing their craft and
-                    learning from one another.
-                </p>
-                <p>
-                    I used to wish I could do this full time, but now, despite
-                    working a full-time job, I realized that I pretty much ‘do’
-                    do this as a full time hobby. In the past three years I’ve
-                    written and produced music in the genre’s of Gospel, Hip
-                    Hop, Rap, R&B, Soul, and Reggae.
-                </p>
-                <p>
-                    I’m always open to collaborations and know I have much more
-                    diversity of music styles still hidden away in me yet! Feel
-                    welcome to reach out if you’re interested to learn more.
-                </p>
-                <p>
-                    Email:
-                    <a href="mailto:mowla.raymond@gmail.com"
-                        >mowla.raymond@gmail.com</a
-                    >
-                </p>
-                <p>Blessings always,</p>
+            <section id="header-text-links">
+                <a href="#" id="header-intro-text-link">About</a>
+                |
+                <a href="#" id="header-credits-text-link">Credits</a>
             </section>
         </section>
-        <section id="credits-container">
-            <section id="credits">
-                <h1>Special Thanks to:</h1>
-                <ul>
-                    <li>Adam Pondang - Producer</li>
-                    <li>Tonisha Dumaresq – Artist</li>
-                    <li>Mike DeFaria - Producer</li>
-                    <li>Daniella “V” Neyra – Artist</li>
-                    <li>
-                        Sean Xiao – Photography, Videography, Artist &amp;
-                        Website Design
-                    </li>
-                    <li>Tamira Roza – Artist</li>
-                    <li>Suzka - Artist</li>
-                    <li>Justin “J.Rhythmatic” Shaw – Artist</li>
-                    <li>Rayon Anthony – Artist</li>
-                    <li>Shan “Kloud9” Singh – Artist</li>
-                    <li>Tone Avant – Artist</li>
-                </ul>
-                <p>
-                    And all of the faithful brothers and sisters in Christ who
-                    continually remember me in their prayers.
-                </p>
+    </header>
+    <section id="menu">
+        <button id="singles">
+            <i class="fa-solid fa-music"></i>Singles
+        </button>
+        <button id="albums">
+            <i class="fa-solid fa-compact-disc"></i>Albums
+        </button>
+        <button id="freestyles">
+            <i class="fa-solid fa-microphone"></i>Freestyles
+        </button>
+    </section>
+    <section id="sidebar"></section>
+    <section id="display"></section>
+    <section id="intro-container">
+        <h1>Thank you for visiting my website.</h1>
+        <section id="intro">
+            <p>
+                Raymond.mowla.music (IG) started out as a journey from just
+                wanting to accomplish recording a single in my lifetime, to
+                now operating as an organization invested the development of
+                other Artist.
+            </p>
+            <p>
+                Through collaborations with various producers, artists,
+                photographers, and other creatives, this short but sweet
+                journey has had a significant growing and learning curve
+                that moved me from working with a producer to release, ‘one
+                track a month’ in 2019, to now producing my own music and
+                releasing close to ‘one track a week’ along with multiple
+                albums a year in 2022!
+            </p>
+            <p>
+                Along the way, I think I’ve gained some great insights and
+                enjoy working with artists who, more than simply ‘getting
+                famous’ are interested in developing their craft and
+                learning from one another.
+            </p>
+            <p>
+                I used to wish I could do this full time, but now, despite
+                working a full-time job, I realized that I pretty much ‘do’
+                do this as a full time hobby. In the past three years I’ve
+                written and produced music in the genre’s of Gospel, Hip
+                Hop, Rap, R&B, Soul, and Reggae.
+            </p>
+            <p>
+                I’m always open to collaborations and know I have much more
+                diversity of music styles still hidden away in me yet! Feel
+                welcome to reach out if you’re interested to learn more.
+            </p>
+            <p>
+                Email:
+                <a href="mailto:mowla.raymond@gmail.com">mowla.raymond@gmail.com</a>
+            </p>
+            <p>Blessings always,</p>
+        </section>
+    </section>
+    <section id="credits-container">
+        <section id="credits">
+            <h1>Special Thanks to:</h1>
+            <ul>
+                <li>Adam Pondang - Producer</li>
+                <li>Tonisha Dumaresq – Artist</li>
+                <li>Mike DeFaria - Producer</li>
+                <li>Daniella “V” Neyra – Artist</li>
+                <li>
+                    Sean Xiao – Photography, Videography, Artist &amp;
+                    Website Design
+                </li>
+                <li>Tamira Roza – Artist</li>
+                <li>Suzka - Artist</li>
+                <li>Justin “J.Rhythmatic” Shaw – Artist</li>
+                <li>Rayon Anthony – Artist</li>
+                <li>Shan “Kloud9” Singh – Artist</li>
+                <li>Tone Avant – Artist</li>
+            </ul>
+            <p>
+                And all of the faithful brothers and sisters in Christ who
+                continually remember me in their prayers.
+            </p>
+        </section>
+    </section>
+    <footer>
+        <img src="./assets/images/stylus4.jpg" alt="stylus" />
+        <section id="footer-links">
+            <section id="social">
+                <a href="#" class="fa-brands fa-instagram fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-youtube fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-apple fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-spotify fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-soundcloud fa-2x" target="_blank"></a>
+                <a href="#" class="fa-brands fa-whatsapp fa-2x" target="_blank"></a>
+            </section>
+            <section id="footer-text-links">
+                <a href="#" id="footer-intro-text-link">About</a>
+                |
+                <a href="#" id="footer-credits-text-link">Credits</a>
             </section>
         </section>
-        <footer>
-            <img src="./assets/images/stylus4.jpg" alt="stylus" />
-            <section id="footer-links">
-                <section id="social">
-                    <a
-                        href="#"
-                        class="fa-brands fa-instagram fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-youtube fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-apple fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-spotify fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-soundcloud fa-2x"
-                        target="_blank"
-                    ></a>
-                    <a
-                        href="#"
-                        class="fa-brands fa-whatsapp fa-2x"
-                        target="_blank"
-                    ></a>
-                </section>
-                <section id="footer-text-links">
-                    <a href="#" id="footer-intro-text-link">About</a>
-                    |
-                    <a href="#" id="footer-credits-text-link">Credits</a>
-                </section>
-            </section>
-        </footer>
-    </body>
+    </footer>
+</body>
+
 </html>
